Fix layout to properly adjust without unnecessary scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
 body {
   /* TODO: Switching to ListItemText inside ListItem elements will remove the need for this */
   font-family: "Tw Cen W01 Medium", "Roboto", "Helvetica", "Arial", sans-serif;
+  height: 100%;
   margin: 0;
   padding: 0;
+}
+
+html {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
